# celery_learning

./: .gitignore  celerybeat-schedule.dir  flower  pyproject.toml  results.sqlite  tasks.py
celery_app/: __init__.py  celery_config.py  tasks.py
celery_app/utils/: _utils.py
src/celery_app/_project_typing/: __init__.py  _typing.py  celery_typing.py
src/celery_app/app/: celery_app.py
src/celery_app/collections/: __init__.py  _collections.py
src/celery_app/event/: __init__.py  event.py
src/celery_app/utils/: __init__.py  _celery_utils.py  _check_type.py  _utils.py
src/collections/: _collections.py
