[project]
name = ""
version = ""
description = ""
authors = [
    {name = "a129924", email = "a129924@gmail.com"},
]
dependencies = [
    "celery[amqp]>=5.3.6",
    "rabbitmq-server>=0.0.1",
    "sqlalchemy[all]>=2.0.28",
    "flower>=2.0.1",
    "pytomlpp>=1.0.13",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
